[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "steveklabnik/simple-server" }

[dependencies]
warp="0.3.7"
log = "0.4.21"
num_cpus = "1"
scoped_threadpool = "0.1.7"
time = "0.3.36"
pretty_env_logger = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
bufstream="0.1.4"
sqlite="0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger="0.11.3"
simple-server="0.4.0"
[build-dependencies]
